Texture paint Bleed does not work with high poly meshes (regression) #73286

Closed
opened 2020-01-21 09:00:45 +01:00 by Pascal · 17 comments

System Information
Operating system: win10
Graphics card: intel UHD

Blender Version
Broken: 2.83 but same in 2.81a
Worked: 2.79b

Short description of error
Hi,
texture bleeding during painting does not work on large models (apparently), I don't know what is the limit but with 4 millions tris the issue is here.
Reducing the mesh seems to solve the issue. It is not a solution of course but it can help to understand what appends,

Here some screenshots showing the problem:
bleed_ok_on_simple_geometry.jpg
bleed_not_working_on_complex_geometry.jpg
bleed_not_working_on_heavy_geometry_created_in_blender.jpg
Capture.JPG

Exact steps for others to reproduce the error

  • Create a single scene with an heavy object (subdivided sphere with splitted uv for example)
  • Paint on it.

or:

  • Open attached file
  • In the object try to paint on the line that delimits the edges of the uv islands

Even increasing the bleed to 8px that line doesn’t disappear
test_bleed.blend

**System Information** Operating system: win10 Graphics card: intel UHD **Blender Version** Broken: 2.83 but same in 2.81a Worked: 2.79b **Short description of error** Hi, texture bleeding during painting does not work on large models (apparently), I don't know what is the limit but with 4 millions tris the issue is here. Reducing the mesh seems to solve the issue. It is not a solution of course but it can help to understand what appends, Here some screenshots showing the problem: ![bleed_ok_on_simple_geometry.jpg](https://archive.blender.org/developer/F8291549/bleed_ok_on_simple_geometry.jpg) ![bleed_not_working_on_complex_geometry.jpg](https://archive.blender.org/developer/F8291554/bleed_not_working_on_complex_geometry.jpg) ![bleed_not_working_on_heavy_geometry_created_in_blender.jpg](https://archive.blender.org/developer/F8291556/bleed_not_working_on_heavy_geometry_created_in_blender.jpg) ![Capture.JPG](https://archive.blender.org/developer/F8296939/Capture.JPG) **Exact steps for others to reproduce the error** - Create a single scene with an heavy object (subdivided sphere with splitted uv for example) - Paint on it. or: - Open attached file - In the object try to paint on the line that delimits the edges of the uv islands Even increasing the bleed to 8px that line doesn’t disappear [test_bleed.blend](https://archive.blender.org/developer/F8292859/test_bleed.blend)
Author

Added subscriber: @PMA33

Added subscriber: @PMA33

#69787 was marked as duplicate of this issue

#69787 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Hi Pascal, thanks for the report.

The report was tagged as Add-ons. Is this problem related to any addon?
We also require steps to reproduce the problem (as specified in the submission template and guidelines).

Hi Pascal, thanks for the report. The report was tagged as `Add-ons`. Is this problem related to any addon? We also require steps to reproduce the problem (as specified in the [submission template and guidelines](https://developer.blender.org/maniphest/task/edit/form/1/)).
Author

Hi,
thank you for the answer, sorry for the bad tag, no this issue is not related to an add-on (
To reproduce the problem, simply create a sphere for example, split its UV to produce islands, pack them, subdivide the sphere to get more than 4 millions triangles and begin to paint ... you should see the bleed problem (use contrasty colors for base and painting), if you look at the uv island limits in uv editor you should see that bleeding dos not work. You can also try with the attached file, it use a modifier to be lighter but the problem is visible.
Thanks.
Pascal
test_bleed.blend
Capture.JPG

PS : after some other tries the limit for which the problem appears is less than 2.3 millions tris 
Hi, thank you for the answer, sorry for the bad tag, no this issue is not related to an add-on ( To reproduce the problem, simply create a sphere for example, split its UV to produce islands, pack them, subdivide the sphere to get more than 4 millions triangles and begin to paint ... you should see the bleed problem (use contrasty colors for base and painting), if you look at the uv island limits in uv editor you should see that bleeding dos not work. You can also try with the attached file, it use a modifier to be lighter but the problem is visible. Thanks. Pascal [test_bleed.blend](https://archive.blender.org/developer/F8292859/test_bleed.blend) ![Capture.JPG](https://archive.blender.org/developer/F8296939/Capture.JPG) ``` PS : after some other tries the limit for which the problem appears is less than 2.3 millions tris

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Author

Hi, I saw for the tag, I changed it, I hope it is ok (I am not so familiar with the site yet).
Thanks.
Pascal

Hi, I saw for the tag, I changed it, I hope it is ok (I am not so familiar with the site yet). Thanks. Pascal
Germano Cavalcante changed title from texture bleed does not seem to work on large models to Texture paint Bleed does not work with high poly meshes (regression) 2020-01-23 17:36:31 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @Yong-3, @brecht

Added subscribers: @Yong-3, @brecht
Author

This comment was removed by @PMA33

*This comment was removed by @PMA33*
Author

This comment was removed by @PMA33

*This comment was removed by @PMA33*
Author

Hi, no body want to work on this issue? it's a shame, it's still quite critical as a bug.

Hi, no body want to work on this issue? it's a shame, it's still quite critical as a bug.
Jeroen Bakker was assigned by Dalai Felinto 2020-05-11 14:35:44 +02:00

This issue was referenced by 7965c735f1

This issue was referenced by 7965c735f12b885803933363e9b1ca8e85067af6

This issue was referenced by c9360b239b

This issue was referenced by c9360b239bc7ebe09721b7d740995f01ee7d8bb3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Hello, my last tests seem to show that the issue is fixed, thank you very much.
There is another little issue related to the texture panting, but I do not know if I have to begin another thread.
It concerns the lag observed in the beginning on the first painting action (it disappear further in the same stroke and reappear when you begin a new one) , this lag (a portion of second) prevents painting by little and quick brush strokes like in a real painting (I can try to post a video to show the phenomenon). This is less pronounced using a very fast graphic card but it never disappear completely, may be there is something to do with that in order to have a very pleasant painting feeling.
Thank you again for your work, have a pleasant journey
.

Hello, my last tests seem to show that the issue is fixed, thank you very much. There is another little issue related to the texture panting, but I do not know if I have to begin another thread. It concerns the lag observed in the beginning on the first painting action (it disappear further in the same stroke and reappear when you begin a new one) , this lag (a portion of second) prevents painting by little and quick brush strokes like in a real painting (I can try to post a video to show the phenomenon). This is less pronounced using a very fast graphic card but it never disappear completely, may be there is something to do with that in order to have a very pleasant painting feeling. Thank you again for your work, have a pleasant journey .
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73286
No description provided.